# django-fritzconnection_ynh

./: .gitignore  README.md  README_es.md  README_eu.md  README_fr.md  README_gl.md  README_id.md  README_it.md  README_nl.md  README_pl.md  README_ru.md  README_zh_Hans.md  config_panel.toml  dev-cli.py  local_test.py  manifest.json  manifest.toml  pyproject.toml  requirements.dev.txt  tests.toml
.github/workflows/: pytest.yml
conf/: gunicorn.conf.py  local_settings.py  manage.py  nginx.conf  pyinventory.service  requirements.txt  settings.py  systemd.service  urls.py
djfritz_ynh/: __init__.py  constants.py
djfritz_ynh/cli/: dev.py
djfritz_ynh/cli_dev/: __init__.py  code_style.py  packaging.py  testing.py
djfritz_ynh/tests/: __init__.py  test_django_project.py  test_django_project_create_unknown_user_1.snapshot.html  test_doctests.py  test_project_setup.py  test_readme.py
doc/: ADMIN.md  DESCRIPTION.md  DISCLAIMER.md
scripts/: _common.sh  backup  change_url  install  remove  restore  upgrade
tests/: test_django_project.py  test_project_setup.py
