[project]
name = "djfritz_ynh"
dynamic = ["version"]
description = "Web based FritzBox management using Python/Django."
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [
    {name = 'Jens Diemer', email = 'git@jensdiemer.de'}
]
requires-python = ">=3.11"
dependencies = [
    "django-fritzconnection>=0.4.0",  # https://github.com/jedie/django-fritzconnection
    #
    "django_yunohost_integration",  # https://github.com/YunoHost-Apps/django_yunohost_integration
    "gunicorn",
    "psycopg[binary]", # https://github.com/psycopg/psycopg
    "django-redis",
    "django-axes", # https://github.com/jazzband/django-axes
    "cli-base-utilities",  # https://github.com/jedie/cli-base-utilities
]
[dependency-groups]
dev = [
    "manageprojects",  # https://github.com/jedie/manageprojects
    "bx_django_utils",  # https://github.com/boxine/bx_django_utils
    "beautifulsoup4",  # https://pypi.org/project/beautifulsoup4/
    "uv",  # https://github.com/astral-sh/uv
    "tblib",   # https://github.com/ionelmc/python-tblib
    "nox",  # https://github.com/wntrblm/nox
    "coverage",  # https://github.com/nedbat/coveragepy
    "autopep8",  # https://github.com/hhatto/autopep8
    "pyupgrade",  # https://github.com/asottile/pyupgrade
    "flake8",  # https://github.com/pycqa/flake8
    "flake8-bugbear",  # https://github.com/PyCQA/flake8-bugbear
    "pyflakes",  # https://github.com/PyCQA/pyflakes
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "pip-audit",  # https://github.com/pypa/pip-audit
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine
    "typeguard",  # https://github.com/agronholm/typeguard/

    # https://github.com/akaihola/darker
    # https://github.com/ikamensh/flynt
    # https://github.com/pycqa/isort
    # https://github.com/pygments/pygments
    "darker[flynt, isort, color]",
]

[project.urls]
Documentation = "https://github.com/YunoHost-Apps/django-fritzconnection_ynh"
Source = "https://github.com/YunoHost-Apps/django-fritzconnection_ynh"

[project.scripts]
djfritz_ynh_dev = "djfritz_ynh.cli_dev:main"


[ynh-integration]
local_settings_source= "local_settings_source.py"


[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["djfritz_ynh*"]

[tool.setuptools.dynamic]
version = {attr = "djfritz_ynh.__version__"}


[tool.cli_base.pip_audit]
# https://github.com/jedie/cli-base-utilities/blob/main/docs/pip_audit.md
requirements=["requirements.dev.txt"]
strict=true
require_hashes=true
ignore-vuln=[]


[tool.darker]
src = ['.']
# YunoHost apps still use "master" istead of "main", isn't it?
revision = "origin/master..."
line_length = 119
color = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
skip_glob=[".*", "*/htmlcov/*","*/migrations/*","*/local_test/*"]
known_first_party=['djfritz', 'djfritz_ynh']
line_length=119
lines_after_imports=2


[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['.']
command_line = './dev-cli.py test'
disable_warnings = ["couldnt-parse"]

[tool.coverage.report]
omit = ['.*', '*/tests/*']
skip_empty = true
fail_under = 10
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]


[tool.tox]  # https://tox.wiki/en/latest/config.html#pyproject-toml
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{313,312,311}
skip_missing_interpreters = True

[testenv]
passenv = *
skip_install = true
commands_pre =
    pip install -U pip-tools
    pip-sync requirements.dev.txt
commands =
    {envpython} -m coverage run --context='{envname}'
    {envpython} -m coverage combine --append
    {envpython} -m coverage xml
    {envpython} -m coverage report
"""


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "2281f4b"
initial_date = 2023-04-02T17:40:58+02:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "yunohost_django_package"
applied_migrations = [
    "6fa011a", # 2024-09-07T11:11:40+02:00
    "b7f2cb5", # 2025-03-23T15:08:42+01:00
]

[manageprojects.cookiecutter_context.cookiecutter]
project_name = "django-fritzconnection"
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "git@jensdiemer.de"
upstream_pkg_name = "djfritz"
upstream_url = "https://github.com/jedie/django-fritzconnection"
upstream_pkg_app_name = "djfritz"
upstream_pkg_project_name = "djfritz_project"
ynh_app_pkg_name = "djfritz_ynh"
ynh_app_url = "https://github.com/YunoHost-Apps/django-fritzconnection_ynh"
bug_tracker_url = "https://github.com/jedie/django-fritzconnection/issues"
upstream_version = "0.4.0"
ynh_version = "+ynh3"
package_description = "Web based FritzBox management using Python/Django."
license = "GPL-3.0-or-later"
_template = "https://github.com/jedie/cookiecutter_templates/"
